--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,7 +1,7 @@
 name: Build and push to artifactory
 
 on:
-  pull_request:
+  push:
     branches:
       - main 
 
@@ -9,7 +9,7 @@ jobs:
   test: 
     runs-on: ubuntu-latest 
     steps:
-      - name: Checkout the repository 
+      - name: Checkout the repository   
         uses: actions/checkout@v2
       
       - name: Set up Node.js (or any language you use)
@@ -25,7 +25,7 @@ jobs:
   
   build:
     runs-on: ubuntu-latest 
-    needs: test
+    # needs: test
     steps:
       - name: Checkout the repository 
         uses: actions/checkout@v2
