--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -31,6 +31,9 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Setup Docker Buildx
+        run: ls -la
+
+      - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
       
       - name: Cache docker layers 
@@ -43,7 +46,7 @@ jobs:
       
       - name: Build docker image 
         run: |
-          docker buildx build --tag amar141989/nestjs:${{ github.sha }}
+          docker buildx build --tag amar141989/nestjs:${{ github.sha }} .
   
   docker-push:
     runs-on: ubuntu-latest
