--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -33,9 +33,6 @@ jobs:
       - name: Setup Docker Buildx
         run: ls -la
 
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      
       - name: Cache docker layers 
         uses: actions/cache@v2
         with:
@@ -52,8 +49,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build 
     steps:
-      # - name: Checkout the repository 
-      #   uses: actions/checkout@v2
+      - name: Login to docker 
+        run: echo ${{ secrets.DOCKER_USERNAME }}:${{ secrets.DOCKER_PASSWORD }}
+        
       - name: Login to docker 
         uses: docker/login-action@v1
         with:
