--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -30,8 +30,11 @@ jobs:
       - name: Checkout the repository 
         uses: actions/checkout@v2
       
-      - name: Setup Docker Buildx
-        run: ls -la
+      - name: Login to docker 
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Cache docker layers 
         uses: actions/cache@v2
@@ -43,18 +46,4 @@ jobs:
       
       - name: Build docker image 
         run: |
-          docker buildx build --tag amar141989/nestjs:${{ github.sha }} .
-  
-  docker-push:
-    runs-on: ubuntu-latest
-    needs: build 
-    steps:
-      - name: Login to docker 
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Push docker image 
-        run: |
-          docker push amar141989/nestjs:${{ github.sha }}
+          docker buildx build --push --tag amar141989/nestjs:${{ github.sha }} .
